[tool.poetry]
name = "leb.kpal"
version = "0.0.0"
description = "Hardware control for imaging science"
authors = ["Kyle M. Douglass <kyle.douglass@epfl.ch>"]
license = "BSD3"
packages = [
    { include = "leb", from = "src" }
]

[tool.poetry.dependencies]
numpy = "*"
python = ">=3.13"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
